    more easily visualising large/complex workflows.
  * Refactored some of the core graph behaviour used for mass-movement of net elements
    to simplify and speed up their movement.
  * Enhanced the printout and PNG export functionality to write the Specification
    ID and Net ID to the generated output image.
  * There are now a number of zoom options available from the menus and toolbar for
    changing the zoom level on nets.

Version 1.4.1 (19/05/2006) "With our thoughts, we make the world"
  * This version of the editor has been upgraded to use version 7.2.1 of the YAWL Engine, 
    JGraph 5.8.1.1 and ProGuard 3.6.
  * With this release, the label underneath a task is no longer the task's decomposition
    label.  A new popup menu item is available for tasks, "Set Label..." that allows 
    workflow designers to write whatever freeform text they desire for the task (in
    exactly the same manner as conditions). If there is no label when  a designer assigns a 
    decomposition or an unfolding net, decomposition/net label will be used as a default for 
    the task label. 
  * Now that decompositions are buried a little deeper in the user-interface, tooltips
    for net elements have been upgraded to show a number of lines of relevant information
    for elements.  Hovering over a task will expose the decomposition the task has been 
    assigned to, along with other information such as engine id, and the decorators used.
  * Data that will eventually be used as text between XML tags in the engine XML (for instance,
    Specification properties, and Net ele	ment labels) are now controlled by a new text
    widget that does not allow XML special characters (such as '<' and '>') to be input.
  * The Parameter Update dialog has had some usability enhancements to clarify the expected 
    usage of the two XQuery generation buttons supplied as a user-convenience. Now, when the 